--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required(VERSION 3.18)
 # Enable CUDA
 find_package(CUDA REQUIRED)
 
+# Define ENABLE_CUDA flag
+add_definitions(-DENABLE_CUDA)
+
 # Set CUDA flags
-set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3;-arch=sm_60;-std=c++14)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3;-arch=sm_60;-std=c++11)
 
 # Include directories
 include_directories(${CUDA_INCLUDE_DIRS})
@@ -29,8 +32,8 @@ add_library(msm_cpu STATIC
     msm.cpp
 )
 
-# Set C++ standard
-target_compile_features(msm_cpu PRIVATE cxx_std_14)
+# Set C++ standard to match main project
+target_compile_features(msm_cpu PRIVATE cxx_std_11)
 
 # Install targets
 install(TARGETS msm_gpu msm_cpu
