fix compile error

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -1,23 +1,22 @@
 cmake_minimum_required(VERSION 3.18)
 
-# Try to find CUDA (optional)
-find_package(CUDA QUIET)
+# Try to find CUDA (optional) - modern approach
+find_package(CUDAToolkit QUIET)
 
 # Check if CUDA was found
-if(CUDA_FOUND)
+if(CUDAToolkit_FOUND)
     message(STATUS "CUDA found, enabling GPU acceleration")
     # Define ENABLE_CUDA flag
     add_definitions(-DENABLE_CUDA)
+    # Enable CUDA language
+    enable_language(CUDA)
 else()
     message(STATUS "CUDA not found, building CPU-only version")
 endif()
 
-if(CUDA_FOUND)
+if(CUDAToolkit_FOUND)
     # Set CUDA flags
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3;-arch=sm_60;-std=c++11)
-
-    # Include directories
-    include_directories(${CUDA_INCLUDE_DIRS})
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 -arch=sm_60 -std=c++11")
 
     # CUDA source files
     add_library(msm_gpu SHARED
@@ -31,10 +30,8 @@ if(CUDA_FOUND)
         POSITION_INDEPENDENT_CODE ON
     )
 
-
-
     # Link against CUDA libraries
-    target_link_libraries(msm_gpu ${CUDA_LIBRARIES})
+    target_link_libraries(msm_gpu CUDA::cudart)
 endif()
 
 # C++ source files (non-CUDA)
@@ -46,7 +43,7 @@ add_library(msm_cpu STATIC
 target_compile_features(msm_cpu PRIVATE cxx_std_11)
 
 # Install targets
-if(CUDA_FOUND)
+if(CUDAToolkit_FOUND)
     install(TARGETS msm_gpu msm_cpu
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
